tidy markdown, drop random baseline

--- a/day_3/day_3c.ipynb
+++ b/day_3/day_3c.ipynb
@@ -11,21 +11,21 @@
     "# Day 3c\n",
     "\n",
     "So far, we have treated the language model as a fixed feature extractor:\n",
-    "the model produces embeddings, and all task learning happens in a separate, linear classifier.\n",
+    "the model produces embeddings, and all task-specific training happens in a separate, linear classifier (`RidgeClassifierCV`).\n",
     "\n",
     "Now we allow the language model itself to **adapt to the task**.\n",
     "\n",
-    "A straightforward way to do this would be full fine-tuning, where all model parameters are updated.\n",
+    "A straightforward way to do this would be full fine-tuning, where all model parameters are tuned to the task.\n",
     "\n",
     "However, full fine-tuning: (1) updates millions of parameters, (2) requires substantial GPU memory and time, (3) and is often unnecessary for relatively small classification tasks.\n",
     "\n",
-    "Instead, we use **LoRA (Low-Rank Adaptation)**, a parameter-efficient fine-tuning method.\n",
+    "Instead, we use [**LoRA (Low-Rank Adaptation)**](https://arxiv.org/abs/2106.09685), a parameter-efficient fine-tuning method.\n",
     "\n",
     "LoRA inserts small, trainable low-rank matrices into the model’s attention layers, keeps the original pretrained weights frozen, and updates less than 1% of the total parameters.\n",
     "\n",
     "This keeps training fast and lightweight, while still allowing task-specific learning.\n",
     "\n",
-    "**Credits**: We would like to thank [Taisiia Tikhomirova](https://www.mpib-berlin.mpg.de/staff/taisiia-tikhomirova) and [Valentin Kriegmair](https://www.mpib-berlin.mpg.de/person/valentin-kriegmair/171978) for their help in creating this exercise."
+    "**Credits**: We would like to thank [Taisiia Tikhomirova](https://www.mpib-berlin.mpg.de/staff/taisiia-tikhomirova) and [Valentin Kriegmair](https://www.mpib-berlin.mpg.de/person/valentin-kriegmair/171978) for creating this exercise."
    ]
   },
   {
@@ -41,20 +41,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "grf05qgP2GMF",
-   "metadata": {
-    "id": "grf05qgP2GMF"
-   },
-   "source": [
-    "## Environment Setup (LoRA fine-tuning)\n",
-    "\n",
-    "For fine-tuning, a GPU runtime is recommended."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
    "id": "7DSI22Tl2G5z",
    "metadata": {
     "colab": {
@@ -63,7 +50,6 @@
     "id": "7DSI22Tl2G5z",
     "outputId": "1f7de725-a3b2-4d02-96c0-0d5bff4f26ed"
    },
-   "outputs": [],
    "source": [
     "import sys\n",
     "if 'google.colab' in sys.modules:\n",
@@ -81,7 +67,9 @@
     "from transformers import AutoTokenizer, AutoModelForSequenceClassification, TrainingArguments, Trainer, DataCollatorWithPadding\n",
     "from peft import LoraConfig, get_peft_model, TaskType\n",
     "import evaluate"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -90,7 +78,7 @@
     "id": "3RnF8vm92Pk5"
    },
    "source": [
-    "## Load the same data and Prepare labels\n",
+    "## Load the same data and prepare labels\n",
     "\n",
     "\n",
     "We reuse:\n",
@@ -102,13 +90,11 @@
     "- `bias`: label\n",
     "\n",
     "\n",
-    "Transformers expect integer labels: 0..K-1.\n",
-    "We create a mapping from label name → id using the training set."
+    "Transformers expect integer labels. We create a mapping from label name → integer ID using the training set."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "7feGCJTD2A1B",
    "metadata": {},
    "source": [
@@ -118,7 +104,8 @@
     "\n",
     "media_bias_train"
    ],
-   "outputs": []
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -129,27 +116,27 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
    "source": [
     "# 2. Prepare Label Mappings\n",
     "label_names = sorted(media_bias_train[\"bias\"].unique())\n",
     "label2id = {name: i for i, name in enumerate(label_names)}\n",
-    "id2label = {i: name for name, i in label2id.items()}"
+    "id2label = {i: name for name, i in label2id.items()}\n",
+    "\n",
+    "print(f\"label2id: {label2id}\\nid2label: {id2label}\")"
    ],
    "id": "44de16d7ec499572",
-   "outputs": []
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "We create a new column 'label' which the Trainer specifically looks for by default",
+   "source": "We create a new column 'label' which the Trainer (see below) specifically looks for by default.",
    "id": "16d0145f0def4cc0"
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# 3. Apply mapping to DataFrames\n",
     "media_bias_train[\"label\"] = media_bias_train[\"bias\"].map(label2id)\n",
@@ -159,7 +146,9 @@
     "print(label2id)\n",
     "media_bias_train.head(3)"
    ],
-   "id": "1374ef4e868cdb7d"
+   "id": "1374ef4e868cdb7d",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -167,11 +156,13 @@
    "metadata": {
     "id": "glYKy71h2U1-"
    },
-   "source": "## Tokenization"
+   "source": [
+    "## Tokenization and dataset conversion\n",
+    "The code next loads the right tokenizer for the model (`\"all-MiniLM-L6-v2\"`), converts the `pd.DataFrame`s to Hugging Face Datasets, and tokenizes the texts."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "Qy92ZPFH2SpO",
    "metadata": {
     "colab": {
@@ -181,13 +172,12 @@
     "id": "Qy92ZPFH2SpO",
     "outputId": "66d1a46d-eaa4-46a1-8a59-41be5258bebc"
    },
-   "outputs": [],
    "source": [
     "# Define the base model - MiniLM (a small BERT-based model) to fit in memory/compute constraints\n",
-    "base_model_name = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
+    "model_ckpt = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
     "\n",
     "# Load tokenizer\n",
-    "tokenizer = AutoTokenizer.from_pretrained(base_model_name)\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_ckpt)\n",
     "\n",
     "# Tokenizes the text. Truncation=True ensures texts longer than max_length are cut off.\n",
     "def tokenize(batch):\n",
@@ -201,7 +191,9 @@
     "# We remove the 'text' column because the model only needs the numerical 'input_ids'\n",
     "train_tok = train_ds.map(tokenize, batched=True).remove_columns([\"text\"])\n",
     "test_tok  = test_ds.map(tokenize, batched=True).remove_columns([\"text\"])"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -212,11 +204,10 @@
    "source": [
     "## LoRA setup (PEFT)\n",
     "\n",
-    "We load a MiniLM sequence classifier and apply LoRA adapters to attention projections.\n",
+    "The code next loads the model (`\"all-MiniLM-L6-v2\"`) and applies LoRA adapters to the attention projections.\n",
     "\n",
-    "For MiniLM (which is BERT-based), common LoRA targets are `query` and `value`.\n",
+    "For `\"all-MiniLM-L6-v2\"` (which is BERT-based), common LoRA targets are `query` and `value`.\n",
     "This updates only a small number of parameters while leaving the base model frozen.\n",
-    "\n",
     "\n",
     "\n",
     "**LoRA parameters**\n",
@@ -233,7 +224,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "FXcHGYOR22LI",
    "metadata": {
     "colab": {
@@ -256,11 +246,10 @@
     "id": "FXcHGYOR22LI",
     "outputId": "4b1c8f72-0e65-40da-e7a4-65ba18e9cfca"
    },
-   "outputs": [],
    "source": [
     "# Load the base model\n",
     "model = AutoModelForSequenceClassification.from_pretrained(\n",
-    "    base_model_name,\n",
+    "    model_ckpt,\n",
     "    num_labels=len(label_names),\n",
     "    id2label=id2label,\n",
     "    label2id=label2id,\n",
@@ -268,8 +257,6 @@
     ")\n",
     "\n",
     "# LoRA Configuration\n",
-    "# LoRA works by adding pairs of rank-decomposition matrices to existing weights\n",
-    "# and only training those newly added weights.\n",
     "lora_config = LoraConfig(\n",
     "    task_type=TaskType.SEQ_CLS, # Sequence Classification\n",
     "    r=8,                        # Rank: The dimension of the low-rank matrices. Higher = more parameters.\n",
@@ -284,7 +271,9 @@
     "# Verify trainable parameters\n",
     "# You should see a very low percentage (usually <1%)\n",
     "model.print_trainable_parameters()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -307,12 +296,11 @@
     "\n",
     "- `save_strategy`: controls whether model checkpoints are saved during training.  Here we disable saving.\n",
     "\n",
-    "- `report_to`: disables external logging tools (e.g., Weights & Biases)."
+    "- `report_to`: enables/disables external logging tools (e.g., Weights & Biases)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "1EOe0vNN2_rr",
    "metadata": {
     "colab": {
@@ -335,7 +323,6 @@
     "id": "1EOe0vNN2_rr",
     "outputId": "65eb2b94-0352-44be-8eb5-709ab769ee90"
    },
-   "outputs": [],
    "source": [
     "# Training Arguments\n",
     "training_args = TrainingArguments(\n",
@@ -358,7 +345,9 @@
     "\n",
     "# Start Training\n",
     "trainer.train()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -369,38 +358,11 @@
    "source": [
     "### Evaluation\n",
     "\n",
-    "To fairly compare the base model and the LoRA-fine-tuned model, we must evaluate them using exactly the same procedure.\n",
-    "\n",
-    "Instead of writing our own evaluation loop, we use HuggingFace’s built-in **Trainer.evaluate()** method.\n",
-    "\n",
-    "The idea is simple:\n",
-    "\n",
-    "We keep the evaluation setup fixed and only change which model is being evaluated.\n",
-    "\n",
-    "To do this, we:\n",
-    "\n",
-    "\n",
-    "*  Define how accuracy should be computed.\n",
-    "\n",
-    "*  Use a Trainer object to evaluate the base model.\n",
-    "\n",
-    "*  Use the same setup to evaluate the LoRA-fine-tuned model.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "Instead of writing our own evaluation loop, we use HuggingFace’s built-in **Trainer.evaluate()** method."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "TDLJd21Lto_T",
    "metadata": {
     "colab": {
@@ -410,7 +372,6 @@
     "id": "TDLJd21Lto_T",
     "outputId": "832138ff-8970-49fb-8341-288fd905a5b8"
    },
-   "outputs": [],
    "source": [
     "# Load a standard accuracy metric\n",
     "accuracy_metric = evaluate.load(\"accuracy\")\n",
@@ -437,45 +398,6 @@
     "        references=labels\n",
     "    )\n",
     "\n",
-    "# Load the base model\n",
-    "base_model = AutoModelForSequenceClassification.from_pretrained(\n",
-    "    base_model_name,\n",
-    "    num_labels=len(label_names),\n",
-    "    id2label=id2label,\n",
-    "    label2id=label2id,\n",
-    "    device_map=\"cuda\"\n",
-    ")\n",
-    "\n",
-    "# Create a Trainer for the base (not fine-tuned) model\n",
-    "base_trainer = Trainer(\n",
-    "    model=base_model,        # pretrained model with no task-specific adaptation\n",
-    "    args=training_args,      # evaluation settings (batch size, device, etc.)\n",
-    "    eval_dataset=test_tok,   # test data (never seen during training)\n",
-    "    tokenizer=tokenizer,     # tokenizer used to prepare inputs\n",
-    "    compute_metrics=compute_metrics,  # how to compute accuracy\n",
-    ")\n",
-    "\n",
-    "# Run evaluation\n",
-    "base_metrics = base_trainer.evaluate()\n",
-    "\n",
-    "# Print baseline accuracy (random model)\n",
-    "print(\"Accuracy before fine-tuning:\", base_metrics[\"eval_accuracy\"])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "CbWg4JoIt1bn",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 91
-    },
-    "id": "CbWg4JoIt1bn",
-    "outputId": "4e1348d7-5bbe-4054-e423-ead2be66e677"
-   },
-   "outputs": [],
-   "source": [
     "# Create a Trainer for the LoRA-fine-tuned model\n",
     "lora_trainer = Trainer(\n",
     "    model=trainer.model,     # model after LoRA fine-tuning\n",
@@ -489,18 +411,10 @@
     "lora_metrics = lora_trainer.evaluate()\n",
     "\n",
     "# Print accuracy after fine-tuning\n",
-    "print(\"Accuracy after fine-tuning:\", lora_metrics[\"eval_accuracy\"])\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "-cee8mew38lj",
-   "metadata": {
-    "id": "-cee8mew38lj"
-   },
-   "source": [
-    "**LoRA allows us to fine-tune a language model efficiently by training only a small number of additional parameters, while keeping the original model mostly fixed.**\n"
-   ]
+    "print(\"Accuracy after fine-tuning:\", lora_metrics[\"eval_accuracy\"])"
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -514,7 +428,7 @@
     "- `r ∈ {4, 8, 16}`\n",
     "- `lora_alpha ∈ {8, 16, 32}`\n",
     "\n",
-    "How the performance changes? Why do you think it is?"
+    "How does the performance change? Why do you think it is?"
    ]
   }
  ],
