change train_ds and test_ds throughout

--- a/day_3/day_3c.ipynb
+++ b/day_3/day_3c.ipynb
@@ -189,8 +189,8 @@
     "\n",
     "# Apply tokenization\n",
     "# We remove the 'text' column because the model only needs the numerical 'input_ids'\n",
-    "train_tok = train_ds.map(tokenize, batched=True).remove_columns([\"text\"])\n",
-    "test_tok  = test_ds.map(tokenize, batched=True).remove_columns([\"text\"])"
+    "train_ds = train_ds.map(tokenize, batched=True).remove_columns([\"text\"])\n",
+    "test_ds  = test_ds.map(tokenize, batched=True).remove_columns([\"text\"])"
    ],
    "outputs": [],
    "execution_count": null
@@ -339,7 +339,7 @@
     "trainer = Trainer(\n",
     "    model=model,  # LoRA-augmented MiniLM model whose trainable parameters will be optimized\n",
     "    args=training_args,  # Training hyperparameters (learning rate, epochs, batch size, logging, etc.)\n",
-    "    train_dataset=train_tok,  # Tokenized training data providing inputs and labels\n",
+    "    train_dataset=train_ds,  # Tokenized training data providing inputs and labels\n",
     "    data_collator=DataCollatorWithPadding(tokenizer),  # Pads sequences dynamically per batch using the tokenizer\n",
     ")\n",
     "\n",
@@ -401,10 +401,10 @@
     "# Create a Trainer for the LoRA-fine-tuned model\n",
     "lora_trainer = Trainer(\n",
     "    model=trainer.model,     # model after LoRA fine-tuning\n",
-    "    args=training_args,      # same evaluation settings\n",
-    "    eval_dataset=test_tok,   # same test data\n",
-    "    tokenizer=tokenizer,     # same tokenizer\n",
-    "    compute_metrics=compute_metrics,  # same accuracy computation\n",
+    "    args=training_args,      # evaluation settings\n",
+    "    eval_dataset=test_ds,   # test data\n",
+    "    tokenizer=tokenizer,     # tokenizer\n",
+    "    compute_metrics=compute_metrics,  # accuracy computation\n",
     ")\n",
     "\n",
     "# Run evaluation\n",
