add info on training loss

--- a/day_3/day_3c.ipynb
+++ b/day_3/day_3c.ipynb
@@ -350,6 +350,12 @@
    "execution_count": null
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "It is important to note that the training loss printed here is the average **cross entropy loss** per sample (not the accuracy!).",
+   "id": "76ca5e3cb7aa2306"
+  },
+  {
    "cell_type": "markdown",
    "id": "Tj3dVoh43ua0",
    "metadata": {
@@ -423,7 +429,7 @@
     "id": "qRfNESWs396f"
    },
    "source": [
-    "**TASK:** LoRA sweep (capacity vs performance)\n",
+    "**TASK 1:** LoRA sweep (capacity vs performance)\n",
     "Try:\n",
     "- `r ∈ {4, 8, 16}`\n",
     "- `lora_alpha ∈ {8, 16, 32}`\n",
