--- a/day_2/day_2.ipynb
+++ b/day_2/day_2.ipynb
@@ -891,7 +891,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "# Initialize MDS model\n",
+    "# Initialize PaCMAP model\n",
     "pac = PaCMAP(n_components=2, random_state=42)\n",
     "\n",
     "# Fit and transform the features\n",
