--- a/day_1/day_1.ipynb
+++ b/day_1/day_1.ipynb
@@ -73,28 +73,15 @@
    "cell_type": "code",
    "id": "267fad62d6f82855",
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2025-12-09T11:59:46.504828Z",
-     "start_time": "2025-12-09T11:59:21.150199Z"
-    }
+    "collapsed": false
    },
    "source": [
     "import pandas as pd\n",
     "from sentence_transformers import SentenceTransformer\n",
     "from transformers import pipeline"
    ],
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/miniconda3/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -171,11 +158,7 @@
    "cell_type": "code",
    "id": "cc96eb23af195ac2",
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2025-12-09T12:00:26.526732Z",
-     "start_time": "2025-12-09T11:59:54.690979Z"
-    }
+    "collapsed": false
    },
    "source": [
     "pipe = pipeline('text-generation', model='openai-community/gpt2')\n",
@@ -191,26 +174,8 @@
     "# Print the generated text\n",
     "print(output[0]['generated_text'])"
    ],
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Device set to use mps:0\n",
-      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "He entered a desert field, the ancient stone ruins of the world.\n",
-      "In between the ruins was another man. To the great surprise of many people, he was nothing more than a handsome young man, the kind of young man to be taken aback when his father suddenly arrived.\n",
-      "This time, he was shocked to see that this young man wasn't only a young man from a noble village. He was also a boy named Lassan. He decided to embark on his travels, and to\n"
-     ]
-    }
-   ],
-   "execution_count": 2
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
