--- a/day_3/day_3c.ipynb
+++ b/day_3/day_3c.ipynb
@@ -43,13 +43,7 @@
   {
    "cell_type": "code",
    "id": "7DSI22Tl2G5z",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "7DSI22Tl2G5z",
-    "outputId": "1f7de725-a3b2-4d02-96c0-0d5bff4f26ed"
-   },
+   "metadata": {},
    "source": [
     "import sys\n",
     "if 'google.colab' in sys.modules:\n",
@@ -60,16 +54,24 @@
     "    !pip -q install transformers datasets evaluate accelerate peft\n",
     "\n",
     "    # Change working directory\n",
-    "    %cd /content/drive/MyDrive/LLM4BeSci_Ljubljana2026/day_3\n",
-    "\n",
+    "    %cd /content/drive/MyDrive/LLM4BeSci_Ljubljana2026/day_3"
+   ],
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
     "import pandas as pd\n",
     "from datasets import Dataset\n",
     "from transformers import AutoTokenizer, AutoModelForSequenceClassification, TrainingArguments, Trainer, DataCollatorWithPadding\n",
     "from peft import LoraConfig, get_peft_model, TaskType\n",
     "import evaluate"
    ],
-   "outputs": [],
-   "execution_count": null
+   "id": "3bff6dd16a15615c"
   },
   {
    "cell_type": "markdown",
