delete redundant comma

--- a/day_3/day_3a.ipynb
+++ b/day_3/day_3a.ipynb
@@ -565,7 +565,7 @@
     "n_shots = 10\n",
     "\n",
     "# Taking equal number of neutral and partisan examples\n",
-    "stratified_examples = pd.concat([media_bias_test.iloc[:n_shots//2], media_bias_test.iloc[-n_shots//2:]], )\n",
+    "stratified_examples = pd.concat([media_bias_test.iloc[:n_shots//2], media_bias_test.iloc[-n_shots//2:]])\n",
     "\n",
     "# Shuffling the examples so that the model does not learn an arbitrary order\n",
     "stratified_examples = stratified_examples.sample(frac=1, random_state=42)\n",
