--- a/day_3/day_3b.ipynb
+++ b/day_3/day_3b.ipynb
@@ -73,7 +73,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "# Reload test data from last notebook (day_3a.ipynb)\n",
+    "# Reload test data from last notebook\n",
     "media_bias_test = pd.read_csv('media_bias_test.csv')\n",
     "\n",
     "# Load training data\n",
